# ProofIDE

./: .gitignore  Examples.hs  Language.hs  Lexer.x  Main.hs  Makefile  Parser.y  README.md  TestLanguage.hs  default.nix  pide.css  pide.html  pide.js  proofide.cabal  shell.nix
text-editor/: test.css  test.html  test.js
