Name:                proofide
Version:             0.1
Synopsis:            A language for users
Description:         A language for users
License:             MIT
License-file:        LICENSE
Author:              Valentin Robert
Maintainer:          vrobert@cs.ucsd.edu
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.22

Source-repository head
  type:     git
  location: https://github.com/Ptival/peacoq-server

Library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   lib
  build-depends:
    aeson                     >= 0.8   && < 0.12,
    alex                      >= 3.2   && < 3.3,
    base                      >= 4.8   && < 4.10,
    bytestring                >= 0.10  && < 0.11,
    ghcjs-base                >= 0.2   && < 0.3,
    happy                     >= 1.19  && < 1.20,
    utf8-string               >= 1.0   && < 1.1
  exposed-modules:
  other-modules:

Executable proofide
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   exec
  main-is:          Main.hs
  build-depends:
    base
